@@ -1,23 +1,23 @@
 /*
  * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
- * Copyright (c) 2011-2015, FrostWire(R). All rights reserved.
+ * Copyright (c) 2011-2020, FrostWire(R). All rights reserved.
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.frostwire.android.gui.transfers;
 
+import com.frostwire.search.SearchResult;
 import com.frostwire.transfers.BittorrentDownload;
 import com.frostwire.transfers.TransferItem;
 import com.frostwire.transfers.TransferState;
@@ -35,9 +35,11 @@ import java.util.List;
 final class InvalidBittorrentDownload implements BittorrentDownload, InvalidTransfer {
 
     private final int reasonResId;
+    private SearchResult sr;
 
-    public InvalidBittorrentDownload(int reasonResId) {
+    public InvalidBittorrentDownload(int reasonResId, SearchResult sr) {
         this.reasonResId = reasonResId;
+        this.sr = sr;
     }
 
     public int getReasonResId() {
@@ -192,5 +194,10 @@ final class InvalidBittorrentDownload implements BittorrentDownload, InvalidTran
     @Override
     public File previewFile() {
         return null;
+    }
+
+    @Override
+    public SearchResult getSearchResult() {
+        return sr;
     }
 }
